third_party/WebKit/Source/platform/heap/PageMemory.h
@@ -168,6 +168,15 @@ class PageMemory {
 
   WARN_UNUSED_RESULT bool commit() {
     m_reserved->markPageUsed(writableStart());
+    // Check that in-use page isn't also marked as being a non-heap page
+    // by the current heap's negative cache. That cache is invalidated
+    // when allocating new pages, but crbug.com/649485 suggests that
+    // we do get out of sync somehow.
+    //
+    // TODO(sof): consider removing check once bug has been diagnosed
+    // and addressed.
+    CHECK(!ThreadState::current()->isAddressInHeapDoesNotContainCache(
+        writableStart()));
     return m_writable.commit();
   }
 
